hero section added

--- a/index.html
+++ b/index.html
@@ -29,5 +29,12 @@
             </div>
         </div>
      </header>
+
+     <!-- hero -->
+      <section class="hero">
+        <img class="hero-badge" src="assets/logo-dark.png" alt="">
+        <h1>Emergency Service Directory</h1>
+        <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+      </section>
 </body>
 </html>
