--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Hotline</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
         <!-- Navbar -->
@@ -36,5 +37,30 @@
         <h1>Emergency Service Directory</h1>
         <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
       </section>
+
+      <!-- Main  -->
+       <main class="layout">
+        <!-- cards -->
+         <section class="cards" id="cardsContainer">
+
+         </section>
+
+         <!-- History -->
+          <aside class="history">
+            <div class="history-holder">
+                <div class="title">
+                    <span class="history-emoji" aria-hidden="true"><i class="fa-solid fa-phone"></i></span>
+                    <h2>Call History</h2>
+                </div>
+                <button id="callHistory" class="btn btn-clear" aria-label="Clear Call History">Clear</button>
+            </div>
+
+            <ul id="historyList" class="history-list">
+                <li class="empty">No calls yet. </li>
+            </ul>
+          </aside>
+       </main>
+
+       <script src="script.js"></script>
 </body>
 </html>
