--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
          <!-- History -->
           <aside class="history">
-            <div class="history-holder">
+            <div class="history-header">
                 <div class="title">
-                    <span class="history-emoji" aria-hidden="true"><i class="fa-solid fa-phone"></i></span>
+                    <span class="history-emoji" aria-hidden="true"><i class="fa-solid fa-clock"></i></span>
                     <h2>Call History</h2>
                 </div>
                 <button id="callHistory" class="btn btn-clear" aria-label="Clear Call History">Clear</button>
