js code updated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <aside class="history">
             <div class="history-header">
                 <div class="title">
-                    <span class="history-emoji" aria-hidden="true"><i class="fa-solid fa-clock"></i></span>
+                    <span class="history-emoji" aria-hidden="true"><i class="fa-regular fa-clock"></i></span>
                     <h2>Call History</h2>
                 </div>
                 <button id="callHistory" class="btn btn-clear" aria-label="Clear Call History">Clear</button>
